# evernote-backup

./: .gitignore  .pre-commit-config.yaml  .versionrc.js  CHANGELOG.md  Dockerfile  LICENSE  README.md  SIMILAR_PROJECTS.md  evernote-backup.spec  mypy.ini  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_template.yml
.github/workflows/: manual_build.yml  release.yml  release_brew.yml  release_containers.yml  release_ghcr.yml  release_github.yml  release_pypi.yml  test.yml
evernote_backup/: __main__.py  cli.py  cli_app.py  cli_app_auth.py  cli_app_auth_oauth.py  cli_app_auth_password.py  cli_app_click_util.py  cli_app_storage.py  cli_app_util.py  config.py  config_defaults.py  evernote_client.py  evernote_client_api_http.py  evernote_client_api_tokenized.py  evernote_client_auth.py  evernote_client_classes.py  evernote_client_oauth.py  evernote_client_sync.py  evernote_client_util.py  evernote_client_util_ssl.py  evernote_types.py  log_util.py  note_checker.py  note_exporter.py  note_exporter_util.py  note_formatter.py  note_formatter_util.py  note_lister.py  note_storage.py  note_synchronizer.py  token_util.py  version.py
tests/: conftest.py  test_cli_app.py  test_cli_app_util.py  test_evernote_client.py  test_evernote_client_api.py  test_evernote_client_oauth.py  test_note_exporter_util.py  test_note_formatter.py  test_note_storage.py  test_op_export.py  test_op_init_db.py  test_op_manage.py  test_op_manage_check.py  test_op_manage_list.py  test_op_reauth.py  test_op_sync.py  test_op_sync_v2.py  utils.py
