[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "evernote-backup"
version = "1.9.3"
description = "Backup & export all Evernote notes and notebooks."
authors = ["vzhd1701 <vzhd1701@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
license = "MIT"
repository = "https://github.com/vzhd1701/evernote-backup"
keywords = ["evernote", "yinxiang", "backup", "export", "enex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Internet",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/vzhd1701/evernote-backup/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
evernote-backup = "evernote_backup.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
evernote3 = "^1.25.14"
xmltodict = "^0.13.0"
click = "^8.1.7"
oauth2 = "^1.9.0"
click-option-group = "^0.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^23.10.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
flakeheaven = "^3.3.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^1.6.1"
mdformat = "0.7.17"
flake8 = "^4.0.1"

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flakeheaven.toml"
extended_default_ignore=[]
max_line_length = 88
exclude = [
    "tests/*.py",
    "evernote_backup/evernote_client_classes.py",
]

[tool.flakeheaven.plugins]
# Maybe disable
# WPS211 too many arguments
# WPS214 too many methods
# WPS602 forbids @staticmethod
# E800 Found commented out code
# WPS306 forces to use class ClassName(object) <- purely for consistency

# Disabled [personal preference]
# WPS111 short names
# WPS305 forbids f-strings
# WPS326 implicit line concat
# Docstings, don't have any
# WPS226 String constant overuse
# S301, S403 Pickle deserialize, it's my own data

# Exceptions [false positives & formatting]
# WPS323 Found `%` string formatting
# C812 trailing comma <- handled by black
# E203 whitespace before : <- handled by black
# W503 Line break occurred before a binary operator

# E800 TEMPORARILY DISABLE COMMENTED CODE
#flake8-eradicate = ["+*", "-E800"]

pycodestyle = ["+*", "-E203", "-W503"]
flake8-bandit = ["+*", "-S301", "-S403"]
flake8-commas = ["+*", "-C812"]
flake8-quotes = ["+*", "-Q000"]
flake8-rst-docstrings = ["-*"]
flake8-docstrings = ["-*"]
flake8-darglint = ["-*"]
wemake-python-styleguide = ["+*", "-WPS111", "-WPS323", "-WPS326", "-WPS305", "-WPS226"]

[tool.flakeheaven.exceptions."evernote_backup/evernote_client_util.py"]
# Complex decorator
mccabe = ["+*", "-C901"]
wemake-python-styleguide = ["-WPS231", "-WPS232", "-WPS220"]

[tool.flakeheaven.exceptions."evernote_backup/cli.py"]
# Too many arguments, argv options and decorators
wemake-python-styleguide = ["-WPS211", "-WPS216"]

[tool.flakeheaven.exceptions."evernote_backup/cli_app.py"]
# Too many arguments, argv options
wemake-python-styleguide = ["-WPS211"]

[tool.flakeheaven.exceptions."evernote_backup/cli_app_auth.py"]
# Too many arguments, argv options
wemake-python-styleguide = ["-WPS211"]

[tool.flakeheaven.exceptions."evernote_backup/evernote_client.py"]
# Too many arguments, argv options
wemake-python-styleguide = ["-WPS211"]

[tool.flakeheaven.exceptions."evernote_backup/version.py"]
# I like it this way
wemake-python-styleguide = ["-WPS410"]

[tool.flakeheaven.exceptions."evernote_backup/note_formatter_util.py"]
# Time algorithm
wemake-python-styleguide = ["-WPS432", "-WPS509", "-WPS221"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        '*/tests/*'
    ]

[tool.mypy]
files = "evernote_backup"

disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "evernote_backup.evernote_client_classes"
disallow_untyped_defs = false
disallow_untyped_calls = false
