[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "evernote-backup"
version = "1.10.0"
description = "Backup & export all Evernote notes and notebooks."
authors = [
    { name = "vzhd1701", email = "vzhd1701@gmail.com" }
]
readme = "README.md"
license = "MIT"
keywords = ["evernote", "yinxiang", "backup", "export", "enex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "xmltodict==0.13.0",
    "click==8.1.8",
    "click-option-group==0.5.7",
    "requests-oauthlib==1.3.1",
    "thrift (==0.21.0)",
    "evernote-plus (==1.28.1.dev0)",
]

[project.urls]
repository = "https://github.com/vzhd1701/evernote-backup"
changelog = "https://github.com/vzhd1701/evernote-backup/blob/master/CHANGELOG.md"

[project.scripts]
evernote-backup = "evernote_backup.cli:main"

[tool.poetry]
include = ["CHANGELOG.md"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mdformat = "0.7.17"

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flakeheaven.toml"
extended_default_ignore=[]
max_line_length = 88
exclude = [
    "tests/*.py",
]

[tool.flakeheaven.plugins]
# Maybe disable
# WPS211 too many arguments
# WPS214 too many methods
# WPS602 forbids @staticmethod
# E800 Found commented out code
# WPS306 forces to use class ClassName(object) <- purely for consistency

# Disabled [personal preference]
# WPS111 short names
# WPS305 forbids f-strings
# WPS326 implicit line concat
# Docstings, don't have any
# WPS226 String constant overuse
# S301, S403 Pickle deserialize, it's my own data

# Exceptions [false positives & formatting]
# WPS323 Found `%` string formatting
# C812 trailing comma <- handled by black
# E203 whitespace before : <- handled by black
# W503 Line break occurred before a binary operator

# E800 TEMPORARILY DISABLE COMMENTED CODE
#flake8-eradicate = ["+*", "-E800"]

pycodestyle = ["+*", "-E203", "-W503"]
flake8-bandit = ["+*", "-S301", "-S403"]
flake8-commas = ["+*", "-C812"]
flake8-quotes = ["+*", "-Q000"]
flake8-rst-docstrings = ["-*"]
flake8-docstrings = ["-*"]
flake8-darglint = ["-*"]
wemake-python-styleguide = ["+*", "-WPS111", "-WPS323", "-WPS326", "-WPS305", "-WPS226"]

[tool.flakeheaven.exceptions."evernote_backup/evernote_client_util.py"]
# Complex decorator
mccabe = ["+*", "-C901"]
wemake-python-styleguide = ["-WPS231", "-WPS232", "-WPS220"]

[tool.flakeheaven.exceptions."evernote_backup/cli.py"]
# Too many arguments, argv options and decorators
wemake-python-styleguide = ["-WPS211", "-WPS216"]

[tool.flakeheaven.exceptions."evernote_backup/cli_app.py"]
# Too many arguments, argv options
wemake-python-styleguide = ["-WPS211"]

[tool.flakeheaven.exceptions."evernote_backup/cli_app_auth.py"]
# Too many arguments, argv options
wemake-python-styleguide = ["-WPS211"]

[tool.flakeheaven.exceptions."evernote_backup/evernote_client.py"]
# Too many arguments, argv options
wemake-python-styleguide = ["-WPS211"]

[tool.flakeheaven.exceptions."evernote_backup/version.py"]
# I like it this way
wemake-python-styleguide = ["-WPS410"]

[tool.flakeheaven.exceptions."evernote_backup/note_formatter_util.py"]
# Time algorithm
wemake-python-styleguide = ["-WPS432", "-WPS509", "-WPS221"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        '*/tests/*'
    ]

[tool.mypy]
files = "evernote_backup"

disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

check_untyped_defs = true
ignore_missing_imports = true
